--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,11 @@ body {
   align-items: center;
 }
 
+.App{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .question{
   display: flex;
   flex-direction: column;
@@ -39,4 +44,10 @@ button {
   padding: 10px;
   font-weight: 300;
 
+}
+
+.submit-button {
+  background-color: #4D5B9E;
+  color: #F5F7FB;
+  width: 20vw;
 }
